erDiagram
    USERS ||--o{ BOOKINGS : membuat
    USERS ||--o{ REPAIR_REPORTS : melapor
    USERS ||--o{ MESSAGES : mengirim
    USERS ||--o{ ROOMS : pj
    ROOMS ||--o{ FACILITIES : memiliki
    CATEGORIES ||--o{ FACILITIES : mengelompokkan
    FACILITIES ||--o{ BOOKINGS : dipinjam
    FACILITIES ||--o{ REPAIR_REPORTS : dilaporkan
    BOOKINGS ||--o| USERS : approved_by

    USERS {
        int id
        string name
        string email
        string password
        enum role
        int room_id
        timestamps
    }

    ROOMS {
        int id
        string name
        string code
        int user_id
        timestamps
    }

    CATEGORIES {
        int id
        string name
        string type
        timestamps
    }

    FACILITIES {
        int id
        int room_id
        int category_id
        string name
        string location
        string description
        int capacity
        int unit
        enum condition
        timestamps
    }

    BOOKINGS {
        int id
        int user_id
        int facility_id
        datetime start_time
        datetime end_time
        string reason
        int capacity_used
        enum status
        int approved_by
        datetime check_in_time
        bool checked_in
        datetime check_out_time
        bool checked_out
        timestamps
    }

    REPAIR_REPORTS {
        int id
        int user_id
        int facility_id
        string description
        enum status
        string photo
        timestamps
    }

    MESSAGES {
        int id
        int sender_id
        int receiver_id
        string subject
        text body
        timestamps
    }
